@@ -1,3 +1,4 @@
+  - fix handling of assign inside {insert}-tags (messju)
   - fix handling if [...] inside triple-quotes in config-files (messju)
   - fix handling of simple-math-operators inside modifiers (Dominik, messju)
   - fix handling of trailing-slashes in open_basedir in
